test/cgip/PP/error/inheritance/rep/reperr-38.javaerr20
rep-38.arg, l. 32, c. 16:
  Error : G`m is not defined in scope
